# clanglite

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.py
clanglite/: AST.py  AST.pyi  Core.py  __init__.py  ast.py  ast.pyi  clanglite.pyi  decl.pyi
clanglite/binding/: __init__.py  config.py  cursor.py  location.py  parser.py  type.py
clanglite/binding/ast/: attr.py  basic.py  decl.py  expr.py  other.py  ref.py  stmt.py  type.py
clanglite/typings/: basic.pyi  decl.pyi  stmt.pyi
include/: Cursor.h  Decl.h
include/clanglite/: basic.h  register.h
include/clanglite/ast/: attr.h  basic.h  decl.h  expr.h  stmt.h  type.h
include/clanglite/binding/: basic.h
include/clanglite/binding/ast/: attr.h  stmt.h  type.h
include/clanglite/clang/: core.h
include/clanglite/core/: core.h
scripts/: generate.py
src/: Bind.cpp  Cursor.cpp  Decl.cpp  Matcher.cpp  Parser.cpp
src/binding/: basic.cpp  register.cpp
src/binding/ast/: basic.cpp  decl.cpp  expr.cpp  stmt.cpp  type.cpp
src/binding/core/: core.cpp
src/clang/: ast_matcher.cpp
src/clang/ast/: decl.cpp  expr.cpp  stmt.cpp  type.cpp
src/clang/core/: core.cpp  matcher.cpp
tests/: test.py  test_CallExpr.py
